# kicad-to-openpnp

./: .gitignore  README.md  kicad-footprint-to-openpnp-package.py  pyproject.toml
kicad_to_openpnp/: board_to_packages.py  board_to_parts.py  cli_utils.py  const.py  footprint_to_package.py  kicad_board_to_openpnp_packages.py  kicad_footprint_to_openpnp_package.py  utils.py  xml_utils.py
